@@ -1,13 +1,14 @@
 package org.hh99.gradation.jwt;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.security.Key;
 import java.util.Base64;
 import java.util.Date;
 
 import org.hh99.gradation.domain.UserAuthEnum;
+import org.hh99.gradation.message.ErrorMessage;
 import org.hh99.gradation.message.JwtErrorMessage;
 import org.hh99.gradation.security.UserDetailsImpl;
 import org.slf4j.Logger;
@@ -68,12 +69,17 @@ public class JwtUtil {
     }
 
     public void addJwtToCookie(String token, HttpServletResponse res) {
-		token = URLEncoder.encode(token, StandardCharsets.UTF_8).replaceAll("\\+", "%20");
-		Cookie cookie = new Cookie(AUTHORIZATION_HEADER, token);
-		cookie.setPath("/");
+        try {
+            token = URLEncoder.encode(token, "utf-8").replaceAll("\\+", "%20");
 
-		res.addCookie(cookie);
-	}
+            Cookie cookie = new Cookie(AUTHORIZATION_HEADER, token);
+            cookie.setPath("/");
+
+            res.addCookie(cookie);
+        } catch (UnsupportedEncodingException e) {
+            logger.error(e.getMessage());
+        }
+    }
 
     public String substringToken(String tokenValue) {
         if (StringUtils.hasText(tokenValue) && tokenValue.startsWith(BEARER_PREFIX)) {
@@ -102,8 +108,12 @@ public class JwtUtil {
         if(cookies != null) {
             for (Cookie cookie : cookies) {
                 if (cookie.getName().equals(AUTHORIZATION_HEADER)) {
-					return URLDecoder.decode(cookie.getValue(), StandardCharsets.UTF_8);
-				}
+                    try {
+                        return URLDecoder.decode(cookie.getValue(), "UTF-8");
+                    } catch (UnsupportedEncodingException e) {
+                        return null;
+                    }
+                }
             }
         }
         return null;
